# fp-wraptr

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  llms.txt  mkdocs.yml  pyproject.toml  pytest_hygiene.py  sitecustomize.py
.claude/: settings.local.json
.codex/: config.toml
.github/workflows/: ci.yml  pages.yml
apps/dashboard/: Run_Manager.py  app.py
apps/dashboard/pages/: 0_Run_Panels.py  10_Data_Update.py  11_Parity.py  2_Compare_Runs.py  3_New_Run.py  4_Equation_Graph.py  5_Equations.py  6_Tweak_Scenario.py  7_Sensitivity.py  8_Historical_Fit.py  9_Dictionary.py
bundles/: pse2008.yaml  pse2025.yaml
docs/: agent-workflows.md  ai-memory.md  api.md  architecture.md  backend-release-corpus.json  changelog.md  cli.md  dashboard.md  data-update.md  dsl.md  fp-ineq-publication-guardrails.json  fp_exe_run_commands.md  index.md  mcp-tools.md  mcp.md  model-runs.md  packs.md  parity.md  quickstart.md  scenario-schema.md  scenarios.md  stock-fm-fast-mode.md
examples/: baseline.yaml  baseline_smoke.yaml  demand_shock.yaml  fiscal_expansion.yaml  fpr_bundle_demo.yaml  fpr_bundle_demo_bundle.R  fpr_real_stock_eq_parity.yaml  fpr_real_stock_eq_parity_bundle.R  higher_growth.yaml  inflation_shock.yaml  pse2008_base.yaml  pse2008_high.yaml  pse2008_low.yaml  pse2025_base.yaml  pse2025_base_fppy_full.yaml  pse2025_base_parity_quick.yaml  pse2025_base_parity_trace_quick.yaml  pse2025_high.yaml  pse2025_high_20h.yaml  pse2025_high_fppy_full.yaml  pse2025_high_parity_quick.yaml  pse2025_high_parity_trace_quick.yaml  pse2025_high_quick.yaml  pse2025_low.yaml  pse2025_low_20h.yaml  pse2025_low_fppy_full.yaml  pse2025_low_parity_quick.yaml  pse2025_low_parity_trace_quick.yaml  rate_path_shock.yaml  recession.yaml  rseq.txt  stock_fm_baseline.yaml  supply_shock.yaml  tight_monetary.yaml
examples/jg/: jg_12m_18hr.yaml  jg_20m_15hr.yaml  jg_baseline.yaml  jg_bundle.yaml
examples/series_pipelines/: pse2025_intgadj.yaml
fp-r/: DESCRIPTION  NAMESPACE
fp-r/R/: 000_utils.R  bundle.R  dependency.R  equations.R  expressions.R  legacy_data.R  mini_run.R  parser.R  periods.R  solver.R  standard_input.R
fp-r/scripts/: run_backend_bundle.R
mcp/: server.py
projects_local/: README.md  scenario_catalog.yaml
projects_local/cards/pse2025/: README.md  deck_jg_policy_create.yaml  deck_ptcoef.yaml  intgadj_series.yaml  jg_constants.yaml  jgcola_series.yaml  jghilo_series.yaml  jgphase_series.yaml  jgswitch_series.yaml  jgwfpass_series.yaml  series_intgadj.yaml  ubgh_series.yaml
projects_local/dictionary_overlays/: baseline.json
projects_local/packs/pse2025/: pack.yaml
projects_local/pse2008/: README.md  intgadj.txt  pse_common.txt  psebase.txt  psehigh.txt  pselow.txt  ptcoef.txt
projects_local/pse2025/: intgadj.txt  pse_common.txt  psehigh.txt  pselow.txt
projects_local/pse2025_20h/: pse_common.txt  pse_takeup_coeffs.txt  psebase.txt  psehigh.txt  pselow.txt  ptcoef.txt
projects_local/stock_fm/: baseline_fppy_parity.yaml
public/: model-runs.spec-backup-20260401_060132.yaml  model-runs.spec.yaml
public/model-runs/: app.js  dictionary.json  index.html  manifest.json  presets.json  styles.css
public/model-runs-backup-20260401_060132/: dictionary.json  styles.css
public/model-runs-backup-20260401_060132/runs/: high_15h.json  low_15h.json  pse2025_base.json  pse2025_base_pimx2.json  pse2025_high_20h.json  pse2025_high_23h_3y.json  pse2025_high_23h_3y_rsexog.json  pse2025_high_23h_5y.json  pse2025_high_23h_5y_2008shock.json  pse2025_low_23h_3y_2008shock.json  pse2025_low_23h_5y_2008shock.json  pse2025_low_23h_5y_pimx2.json
public/model-runs-backup-20260415_140431/: app.js  dictionary.json  index.html  manifest.json
public/model-runs/runs/: high_15h.json  (+89 more)
scripts/: check_repo_hygiene.py  compare_seed_diagnostics.py  detect_zero_forecast.py  parity_sweep_examples_smoke.py  project_env_lib.sh  stock_fm_speed_divergence_eval.py  support_gap_map.py  triage_fppy_report.py  triage_parity_hardfails.py  uvsafe  uvsync
scripts/ai/: build_mapping_backlog.py  check_gemini_batches.py  ingest_gemini_output.py
scripts/assets/: install_fp_exe.py
scripts/ci/: provision_fp_assets.sh  provision_model_runs.sh
scripts/validation/: build_exact_pse_10y_inputs.py  build_pse_pf_comparison_bundles.py  build_rebased_pse_rsexog_inputs.py  patch_rebased_pse_10y_inputs.py
src/fp_py/: __init__.py  cli.py
src/fp_wraptr/: __init__.py  cli.py  hygiene.py  mcp_server.py  model_runs_semantics.py  pages_compilers.py  pages_export.py
src/fppy/: __init__.py  cli.py  config.py  dependency.py  eq_solver.py  equation_search.py  executor.py  expressions.py  input_sources.py  input_tree.py  mini_run.py  pabev_parity.py  parity.py  parser.py  paths.py  release.py  release_export.py  runtime_commands.py  solve_setup.py
tests/: conftest.py  test_agent_workspaces.py  test_alerts.py  test_anchor_acceptance.py  test_authoring.py  test_backend.py  test_backend_defensibility.py  test_backend_release_corpus.py  test_backend_release_shape.py  test_batch.py  test_bls.py  test_bundle.py  test_cli.py  test_cli_data_check_mapping.py  test_cli_data_update_fred.py  test_cli_series_pipeline.py  test_cli_triage.py  test_compare_seed_diagnostics.py  test_dashboard.py  test_dashboard_authoring_workspace.py  test_dashboard_common.py  test_dashboard_loadformat_output.py  test_dashboard_mini_helpers.py  test_dashboard_overlay_editors.py  test_dashboard_pages.py  test_dashboard_ptcoef_editor.py  test_dashboard_ptcoef_tools.py  test_dashboard_scenario_tools.py  test_data_check_mapping.py  test_data_diff_fmdata.py  test_data_update_fred.py  test_data_update_fred_merge.py  test_data_update_fred_normalize.py  test_data_update_merge_policy.py  test_detect_zero_forecast.py  test_dictionary.py  test_dictionary_overlays.py  test_dsl.py  test_export.py  test_fair_bundle.py  (+50 more)
(+198 files in other folders)
